<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sa4"
    tools:context=".given.given">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#0083F6"
                android:padding="5dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/amount"
                android:textColor="#000000"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/amount2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:ems="10"
                android:hint="@string/enter_the_amount"
                android:inputType="textPersonName"
                android:textColor="#000000"
                android:textColorHint="#736969" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#0083F6"
                android:padding="5dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/given"
                android:textColor="#000000"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/name_person2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:ems="10"
                android:hint="@string/name_of_person"
                android:inputType="textPersonName"
                android:textColor="#000000"
                android:textColorHint="#736969" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#0083F6"
                android:padding="5dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/timegt"
                android:textColor="#000000"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/time2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:ems="10"
                android:hint="@string/date_time"
                android:inputType="textPersonName"
                android:textColor="#000000"
                android:textColorHint="#736969" />
        </LinearLayout>


        <Button
            android:id="@+id/add_trans2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:background="@drawable/buttonforoptions"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/add_ntransaction"
            android:textAllCaps="false"
            android:textColor="#FFFFFF" />
    </LinearLayout>
</RelativeLayout>
