<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#039BE5"
    tools:context=".given.given">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/amount2_upd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:ems="10"
            android:hint="@string/enter_the_amount"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:textColor="#000000"
            android:textColorHint="#736969"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/name_person2_upd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:ems="10"
            android:hint="@string/name_of_person"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:textColor="#000000"
            android:textColorHint="#736969"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/time2_upd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:ems="10"
            android:hint="@string/date_time"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:textColor="#000000"
            android:textColorHint="#736969"
            android:textSize="24sp" />

        <Button
            android:id="@+id/add_trans2_upd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@drawable/buttonforoptions"
            android:text="@string/update"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

    </LinearLayout>

</RelativeLayout>
