<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/d"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/title_update_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="#FBFAFA"
                android:hint="@string/title"
                android:padding="5dp"
                android:textColor="#070707"
                android:textColorHint="#8A8383"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/desc_update_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:gravity="top"
                android:hint="@string/content"
                android:padding="9dp"
                android:textColor="#000000"
                android:textColorHint="#A89A9A"
                android:textSize="18sp" />

            <Button
                android:id="@+id/update_btn3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/button_style"
                android:text="@string/update"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="18sp" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>