<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sa4"
    tools:context=".taken.taken">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#58A6E4"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/amount"
                android:textColor="#090909"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/amount"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#F8F8F8"
                android:ems="10"
                android:hint="@string/enter_the_amount"
                android:inputType="textPersonName"
                android:textColor="#000000"
                android:textColorHint="#736969" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#58A6E4"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/taken"
                android:textColor="#090909"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/name_person"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#F8F8F8"
                android:ems="10"
                android:hint="@string/name_of_person"
                android:inputType="textPersonName"
                android:textColor="#000000"
                android:textColorHint="#736969" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#58A6E4"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/timegt"
                android:textColor="#090909"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#F8F8F8"
                android:ems="10"
                android:hint="@string/date_time"
                android:inputType="textPersonName"
                android:textColor="#000000"
                android:textColorHint="#736969" />
        </LinearLayout>

<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="60dp"-->
<!--            android:orientation="horizontal">-->

<!--            <TextView-->
<!--                android:id="@+id/textView5"-->
<!--                android:layout_width="66dp"-->
<!--                android:layout_height="match_parent"-->
<!--                android:layout_weight="1"-->
<!--                android:background="#58A6E4"-->
<!--                android:paddingTop="5dp"-->
<!--                android:paddingBottom="5dp"-->
<!--                android:text="Last date to\nReturn"-->
<!--                android:textColor="#090909"-->
<!--                android:textSize="20sp"-->
<!--                android:paddingLeft="5dp" />-->

<!--            <EditText-->
<!--                android:id="@+id/return_money"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="match_parent"-->
<!--                android:layout_weight="1"-->
<!--                android:background="#F8F8F8"-->
<!--                android:ems="10"-->
<!--                android:hint="date/time"-->
<!--                android:inputType="textPersonName"-->
<!--                android:textColor="#000000"-->
<!--                android:textColorHint="#736969" />-->
<!--        </LinearLayout>-->

        <Button
            android:id="@+id/add_trans"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_style"
            android:text="@string/add_ntransaction"
            android:textColor="#FFFFFF" />
    </LinearLayout>
</RelativeLayout>