<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="false"
    android:background="#D9C6FD"
    tools:context=".timetable.add_studies">


    <ScrollView
        android:id="@+id/f"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/g">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="160dp"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:background="#000000"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/monday"
                android:textColor="#FFFCFC"
                android:textSize="24sp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/work_monday3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="#FFFFFF"
                android:gravity="top"
                android:hint="@string/write_your_work"
                android:padding="4dp"
                android:textColor="#000000"
                android:textColorHint="#817878"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="160dp"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:background="#000000"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/tuesday"
                android:textColor="#FFFCFC"
                android:textSize="24sp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/work_tuesday3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="#FFFFFF"
                android:gravity="top"
                android:hint="@string/write_your_work"
                android:padding="4dp"
                android:textColor="#000000"
                android:textColorHint="#817878"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="160dp"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:background="#000000"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/wednesday"
                android:textColor="#FFFCFC"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/work_wednesday3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="#FFFFFF"
                android:gravity="top"
                android:hint="@string/write_your_work"
                android:padding="4dp"
                android:textColor="#000000"
                android:textColorHint="#817878"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="160dp"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:background="#000000"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/thursday"
                android:textColor="#FFFCFC"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/work_thursday3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="#FFFFFF"
                android:gravity="top"
                android:hint="@string/write_your_work"
                android:padding="4dp"
                android:textColor="#000000"
                android:textColorHint="#817878"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="160dp"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:background="#000000"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/friday"
                android:textColor="#FFFCFC"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/work_friday3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="#FFFFFF"
                android:gravity="top"
                android:hint="@string/write_your_work"
                android:padding="4dp"
                android:textColor="#000000"
                android:textColorHint="#817878"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="160dp"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:background="#000000"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/saturday"
                android:textColor="#FFFCFC"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/work_saturday3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="#FFFFFF"
                android:gravity="top"
                android:hint="@string/write_your_work"
                android:padding="4dp"
                android:textColor="#000000"
                android:textColorHint="#817878"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="160dp"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:background="#000000"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/sunday"
                android:textColor="#FFFCFC"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/work_sunday3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="#FFFFFF"
                android:gravity="top"
                android:hint="@string/write_your_work"
                android:padding="4dp"
                android:textColor="#000000"
                android:textColorHint="#817878"
                android:textSize="20sp" />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/g"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/add5_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/button"
            android:text="@string/update"
            android:textColor="#FFFFFF" />
    </LinearLayout>

</RelativeLayout>